--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
     <body>
+	<h1> welcome to the page </h1>
         <form action="/submit" method="post">
         <label for="name">Username:</label>
         <input type="text" id="name" name="name" required>
